--- a/static/home.css
+++ b/static/home.css
@@ -7,6 +7,13 @@ body{
     padding: 0;
     margin: 0;
 }
+#dash{
+    justify-content: flex-start;
+}
+.logo > p{
+    margin: 0;
+    padding: 0;
+}
 .header{
     grid-row: 1 / span 1;
     background-color: rgb(15%, 15%, 15%);
